# gmailish-5

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  package-lock.json
src/: .env  CMakeLists.txt  Dockerfile_express  Dockerfile_react  Dockerfile_server  README.md  docker-compose.yml  main.cpp
src/Bloom/: BitArray.cpp  BitArray.h  BloomFilter.cpp  BloomFilter.h  HashFunction.cpp  HashFunction.h  StdHashFunction.cpp
src/JSNetwork/: app.js  package-lock.json  package.json
src/JSNetwork/controllers/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/JSNetwork/middleware/: upload.js
src/JSNetwork/models/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/JSNetwork/routes/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/JSNetwork/services/: labels.js  mails.js  users.js
src/Network/: Dockerfile_client  Server.cpp  Server.h  client.py
src/cli/: AddURLCommand.cpp  AddURLCommand.h  App.cpp  App.h  AppState.h  CheckURLCommand.cpp  CheckURLCommand.h  CommandParser.h  DeleteURLCommand.cpp  DeleteURLCommand.h  ICommand.h  InitCommand.cpp  InitCommand.h  InputValidator.cpp  InputValidator.h  InvalidCommand.cpp  InvalidCommand.h  RegexPatterns.h
src/gmailish-web/: package-lock.json  package.json
src/gmailish-web/public/: index.html
src/gmailish-web/src/: App.css  App.js
src/gmailish-web/src/Components/: ComposeModal.js  MailCard.js
src/gmailish-web/src/Components/Auth/: AuthLayoutItem.js  FloatingCircles.js  SignInItem.js
src/gmailish-web/src/Components/LeftMenu/: EditLabelModal.js  LabelItem.js  LeftMenuItem.js  NewLabelModal.js
src/gmailish-web/src/Components/MainMenu/: ComposeModal.css  ComposeModal.js  ErrorAlert.js  MailItem.js  MailView.js  MainMenu.js  MessageEditor.js  RecipientFields.js  StylePanel.js  ToolbarItem.js
src/gmailish-web/src/Components/SignUp/: SignUpLayout.js  SignUpNavItem.js  SignUpSteps.js  StepOneItem.js  StepThreeItem.js  StepTwoItem.js
src/gmailish-web/src/Components/TopMenu/: ProfileCard.css  ProfileCard.js  ThemeSwitch.js  TopMenuItem.js  UserCard.js
src/gmailish-web/src/Pages/: InboxPage.js  Iridescence.js  SignInPage.css  SignInPage.js  SignUpPage.css  SignUpPage.js
src/persistence/: Persistence.cpp  Persistence.h
tests/: CTestTestfile.cmake  Hash_test.cpp  test_all.cpp  test_app.cpp  test_bitarray.cpp  test_bloomfilter.cpp  test_cliargs.cpp  test_load.txt  test_persistence.cpp  test_server.cpp
wiki/: README.md  (+2 more)
(+98 files in other folders)
